# scribed

./: .gitignore  CLAUDE.md  Cargo.toml  DOMAIN.md  README.md  build.rs  deny.toml
.claude/: settings.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SETUP.md  ydotoold.service
scripts/: install.sh
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  paths.rs  service.rs
src/asr/: download.rs  driver.rs  mod.rs  sherpa.rs
src/audio/: capture.rs  device.rs  dsp.rs  mod.rs  rolling.rs
src/input/: aggregator.rs  evdev_listener.rs  mod.rs  rdev_listener.rs
src/lifecycle/: ipc.rs  liveness.rs  mod.rs  pidfile.rs  protocol.rs
src/notification/: desktop.rs  mod.rs  sound.rs
src/output/: backend.rs  mod.rs  retype.rs  window.rs
src/output/backend/: clipboard.rs  enigo.rs  ydotool.rs
src/service/: runtime.rs  timer.rs
tests/: cli_integration.rs  daemon_lifecycle.rs
