[package]
name = "scribed"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "Local streaming dictation daemon (sherpa-onnx streaming RNN-T)"
repository = "https://github.com/ChrisTowles/scribed"
readme = "README.md"
keywords = ["dictation", "speech-to-text", "asr", "streaming", "daemon"]
categories = ["command-line-utilities", "multimedia::audio"]

[features]
default = ["asr"]
# Compile the ASR engine. Disable with `--no-default-features` if the
# sherpa-onnx native library isn't available at build time.
asr = ["dep:sherpa-onnx"]

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "fs",
    "sync",
    "time",
    "io-util",
] }
cpal = "0.15"
crossbeam-channel = "0.5"
parking_lot = "0.12"
directories = "5"
once_cell = "1"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
arboard = { version = "3", default-features = false }
rodio = { version = "0.19", default-features = false, features = ["vorbis"] }
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }

# Optional ASR backend. The official `sherpa-onnx` crate (Apache-2.0)
# replaced the deprecated `sherpa-rs` (deprecation notice March 2026); it
# tracks the C++ sherpa-onnx project version-for-version. Version 1.13.x
# is the minimum that supports the streaming Nemotron 2026-04-25 bundle.
# `static` statically links sherpa-onnx; the build script downloads
# prebuilt libs from GitHub Releases on first build.
sherpa-onnx = { version = "1.13", default-features = false, features = ["static"], optional = true }

# Used by the transcribe_wav smoke-test binary (feature = "asr")
hound = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs", "term"] }
evdev = "0.13"
enigo = { version = "0.6", default-features = false, features = ["x11rb"] }
active-win-pos-rs = "0.9"
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs", "term"] }
rdev = "0.5"
enigo = { version = "0.6" }
active-win-pos-rs = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"
hound = "3"

[[bin]]
name = "scribed"
path = "src/main.rs"

[[bin]]
name = "audio_probe"
path = "src/bin/audio_probe.rs"

[[bin]]
name = "transcribe_wav"
path = "src/bin/transcribe_wav.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
